Update for launch

--- a/README.html
+++ b/README.html
@@ -5,14 +5,13 @@
       </head>
       <body>
         <h1 id="gummigram">Gummigram</h1>
+<p><img src="/images/gummigram.jpg" alt=""></p>
 <p>An HTML, CSS, JS (jQuery) based recreation of the Kingdom Hearts 3 Loading Screen.
 With it, you can create your own posts as your favorite Kingdom Hearts characters, add comments and create fictional dialogue between the characters on this silly social page.</p>
 <h2 id="todo">TODO</h2>
-<ul>
-<li>Add Post Editing</li>
-<li>Add Character Choice on Comment Creation</li>
-</ul>
-<p>Suggestions?</p>
+<p>Suggestions?
+<a href="https://discord.gg/fbChRKn">Gummigram Discord</a>
+<a href="https://discord.gg/teSEFWZ">Heart Container Heroes Discord</a></p>
 
       </body>
     </html>
