Give it an image you can see on github

--- a/README.html
+++ b/README.html
@@ -5,7 +5,7 @@
       </head>
       <body>
         <h1 id="gummigram">Gummigram</h1>
-<p><img src="/images/gummigram.jpg" alt=""></p>
+<p><img src="https://i.imgur.com/opH8mvj.jpg" alt=""></p>
 <p>An HTML, CSS, JS (jQuery) based recreation of the Kingdom Hearts 3 Loading Screen.
 With it, you can create your own posts as your favorite Kingdom Hearts characters, add comments and create fictional dialogue between the characters on this silly social page.</p>
 <h2 id="todo">TODO</h2>
