Drop unnecessary ssl, setup index for launch, remove test code

--- a/README.html
+++ b/README.html
@@ -9,9 +9,12 @@
 <p>An HTML, CSS, JS (jQuery) based recreation of the Kingdom Hearts 3 Loading Screen.
 With it, you can create your own posts as your favorite Kingdom Hearts characters, add comments and create fictional dialogue between the characters on this silly social page.</p>
 <h2 id="todo">TODO</h2>
-<p>Suggestions?
-<a href="https://discord.gg/fbChRKn">Gummigram Discord</a>
-<a href="https://discord.gg/teSEFWZ">Heart Container Heroes Discord</a></p>
+<p>Suggestions?</p>
+<p><a href="https://discord.gg/fbChRKn">Gummigram Discord</a></p>
+<p><a href="https://discord.gg/teSEFWZ">Heart Container Heroes Discord</a></p>
+<h3 id="info">Info</h3>
+<p>This website is merely a fan creation based off of the series Kingdom Hearts and all the characters and concepts within there.</p>
+<p>All characters/etc belong to Square Enix and Disney.</p>
 
       </body>
     </html>
