--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:site" content="@theSaysora">
     <meta name="twitter:title" content="Gummigram">
     <meta name="twitter:description" content="A recreation of the Kingdom Hearts 3 Loading Screen. With it, you can create your own posts as your favorite Kingdom Hearts characters, add comments and create fictional dialogue between the characters on this silly social page.">
-    <meta name="twitter:image" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
+    <meta name="twitter:image" content="http://gummigram.me/images/gummigram.jpg">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
