Let people know they can refresh

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
           <p>This website is merely a fan creation based off of the series Kingdom Hearts and all the characters and concepts within there.
             <br>All characters/etc belong to Square Enix and Disney.
           </p>
+
+          <p class="social">
+            If you want it to reset the posts, just clear your local storage! None of this data is saved or taken, it's all in your browser. No fears of refreshing.
+          </p>
           
           <p>Gummigram was made with love by <a href="http://heartcontainerheroes.com/#saysora"><span class="heart">Saysora</span></span></a> of the <a href="http://heartcontainerheroes.com"><span class="heart">Heart Container Heroes</span></a></p>
           
