--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="manifest" href="/gummigram/site.webmanifest">
+    <link rel="mask-icon" href="/gummigram/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="css/hearts.css" />
+    <link rel="stylesheet" href="/gummigram/css/hearts.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Coda:400,800" rel="stylesheet">
 </head>
@@ -183,7 +183,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="js/kingdom.js"></script>
+  <script type="text/javascript" src="/gummigram/js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="/gummigram/js/kingdom.js"></script>
 </body>
 </html>
